--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -361,6 +361,55 @@ target_link_libraries(tutorial09_several_objects
 set_target_properties(tutorial09_several_objects PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing/")
 create_target_launcher(tutorial09_several_objects WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing/")
 
+# Tutorial 9 - several objects
+add_executable(tutorial09_several_objects_01
+	tutorial09_vbo_indexing_01/tutorial09_several_objects.cpp
+	common/shader.cpp
+	common/shader.hpp
+	common/controls.cpp
+	common/controls.hpp
+	common/texture.cpp
+	common/texture.hpp
+	common/objloader.cpp
+	common/objloader.hpp
+	common/vboindexer.cpp
+	common/vboindexer.hpp
+	
+	tutorial09_vbo_indexing_01/StandardShading.vertexshader
+	tutorial09_vbo_indexing_01/StandardShading.fragmentshader
+)
+target_link_libraries(tutorial09_several_objects_01
+	${ALL_LIBS}
+)
+# Xcode and Visual working directories
+set_target_properties(tutorial09_several_objects PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing_01/")
+create_target_launcher(tutorial09_several_objects WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing_01/")
+
+
+# Tutorial 9_02 - several objects
+add_executable(tutorial09_several_objects_02
+	tutorial09_vbo_indexing_02/tutorial09_several_objects.cpp
+	common/shader.cpp
+	common/shader.hpp
+	common/controls.cpp
+	common/controls.hpp
+	common/texture.cpp
+	common/texture.hpp
+	common/objloader.cpp
+	common/objloader.hpp
+	common/vboindexer.cpp
+	common/vboindexer.hpp
+	
+	tutorial09_vbo_indexing_02/StandardShading.vertexshader
+	tutorial09_vbo_indexing_02/StandardShading.fragmentshader
+)
+target_link_libraries(tutorial09_several_objects_02
+	${ALL_LIBS}
+)
+# Xcode and Visual working directories
+set_target_properties(tutorial09_several_objects PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing_02/")
+create_target_launcher(tutorial09_several_objects WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing_02/")
+
 # Tutorial 10
 add_executable(tutorial10_transparency
 	tutorial10_transparency/tutorial10.cpp
@@ -860,6 +909,14 @@ add_custom_command(
 add_custom_command(
    TARGET tutorial09_several_objects POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tutorial09_several_objects${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing/"
+)
+add_custom_command(
+   TARGET tutorial09_several_objects_01 POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tutorial09_several_objects_01${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing_01/"
+)
+add_custom_command(
+   TARGET tutorial09_several_objects_02 POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tutorial09_several_objects_02${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/tutorial09_vbo_indexing_02/"
 )
 add_custom_command(
    TARGET tutorial10_transparency POST_BUILD
